# zephyr_3.5.0

./: west.yml
boards/arm/n32g45xv_stb/: Kconfig.board  Kconfig.defconfig  board.cmake  n32g45xv_stb-pinctrl.dtsi  n32g45xv_stb.dts  n32g45xv_stb.yaml  n32g45xv_stb_defconfig
boards/arm/n32g45xv_stb/doc/: index.rst
boards/arm/n32g45xv_stb/support/: openocd.cfg
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.n32  adc_n32.c
drivers/can/: CMakeLists.txt  Kconfig  Kconfig.n32  can_n32_bxcan.c
drivers/clock_control/: CMakeLists.txt  Kconfig  Kconfig.n32  clock_n32.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.n32  flash_n32.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.n32  gpio_n32.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.n32  i2c_n32.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  Kconfig.n32  pinctrl_n32.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.n32  uart_n32.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.n32  spi_n32.c
dts/arm/nations/n32g45x/: n32g45.dtsi  n32g45xV.dtsi
dts/bindings/: vendor-prefixes.txt
dts/bindings/adc/: nations,n32-adc.yaml
dts/bindings/can/: nations,n32-bxcan.yaml
dts/bindings/clock/: nations,n32-pll-clock.yaml  nations,n32-rcc.yaml
dts/bindings/flash_controller/: nations,n32-flash-controller.yaml
dts/bindings/gpio/: nations,n32-gpio.yaml
dts/bindings/i2c/: nations,n32-i2c.yaml
dts/bindings/pinctrl/: nations,n32g45-pinctrl.yaml
dts/bindings/serial/: nations,n32-uart.yaml
dts/bindings/spi/: nations,n32-spi.yaml
include/zephyr/drivers/clock_control/: n32_clock_control.h
include/zephyr/dt-bindings/clock/: n32_clock.h
include/zephyr/dt-bindings/pinctrl/: n32-pinctrl.h
modules/hal_nations/: CMakeLists.txt  Kconfig
soc/arm/nations_n32/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc
soc/arm/nations_n32/common/: CMakeLists.txt  pinctrl_soc.h
soc/arm/nations_n32/n32g45x/: CMakeLists.txt  Kconfig.defconfig.n32g45x  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  soc.c  soc.h
